# mock-service

./: .dockerignore  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml
.github/workflows/: ci.yaml
src/: crypto.rs  main.rs  payloads.rs  something.rs
